--- a/src/style.css
+++ b/src/style.css
@@ -92,17 +92,47 @@ a{
 .banner{
     position: relative;
     display: flex;
-    height: 100%;
+    max-height: 100vh;
     background-color: rgb(252, 252, 252);
     background: #FE002E;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right,#FE002E,  #fa4d4d, #FC6767,#ffbbbb);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right,#FE002E, #fa4d4d , #FC6767,#ffbbbb ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to right,#FE002E,  #f52c2c, #fa4a4a,#ffbbbb);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right,#FE002E, #f52c2c , #fa4a4a,#ffbbbb ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     
 }
-.banner2{
-    display: flex;
+.imagePerson{
+    background-image: url(./img/Città\ -\ Abstract.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
     position: relative;
-    background-color: rgb(137, 43, 226);
+    left: 11%;
+    display: flex;
+    top: -80%;
+    width:400px;
+    height: 410px;
+   
+    z-index: 9;
+}
+
+.imgbanner{
+    
+    background-color: #ff000000;
+    display: flex;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    position: relative;
+  
+    left: 66%;
+    width:100%;
+    
+    height: 104vh;
+    background-color: rgba(0, 255, 255, 0);
+    
+}
+
+.banner2{
+    display: flex-grid;
+    position: relative;
+    
     background: #c1b7bf; 
     background: -webkit-linear-gradient(to right,#c1b7bf,#bebebe , #ffffff ); 
     background: linear-gradient(to right,#c1b7bf,#bebebe ,  #ffffff); 
@@ -127,10 +157,11 @@ a{
 
 }
 .alltext{
-    
+    justify-content: center;
+    background-color: rgba(255, 255, 0, 0);
     flex-wrap: wrap;
     position: relative;
-    left: 220px;
+    left: 10px;
     top: 40%;
     z-index: 999;
     height: 300px;
@@ -138,102 +169,65 @@ a{
 }
 
 .titleBanner{
+    justify-content: center;
+    display: flex;
+    width: 100%;
+    background-color: rgba(255, 0, 0, 0);
     color: white;
-    font-size: 35px;
+    font-size: 30px;
+    font-weight: bolder;
+    font-family: 'Slabo 27px';
+}
+
+.textBanner{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    width: 100%;
+    background-color: rgba(255, 0, 0, 0);
+    font-weight: bold;
+    position: relative;
+    color: white;
+    font-size: 25px;
     font-family: 'Slabo 27px';
 }
 .dark{
     color: black;  
-    font-weight: bolder; 
+    font-weight: bold; 
 }
-.textBanner{
+
+
+
+.button-conteiner{
+    margin-top: 30px;
+    background-color: #f00b0b00;
+    width: 100%;
     position: relative;
-    color: white;
-    font-size: 25px;
-    left: 16%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+}
+
+.buttonBanner{
+    border: solid 1px;
+    border-radius: 8px;
+    height: 42px;
+    width: 120px;
+    transition: all .1s;
+    font-size: 15px;
     font-family: 'Slabo 27px';
 }
-
-.imgbanner{
-    
-    
-    display: flex;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    position: relative;
-    display: -moz-stack;
-    left: 66%;
-    width:100%;
-    right: 308px;
-    height: 104vh;
-    background-color: rgba(0, 255, 255, 0);
-    
+.buttonBanner:nth-child(1){
+    margin-right: 8px;
 }
-@media (min-width: 1924px){
-    .alltext{
-        left: 600px;
-    }
+.buttonBanner:nth-child(2){
+    background-color: #000000;
+    color: white;
+    border-color: black;
+    margin-left: 8px;
 }
-@media (min-width: 1654px){
-    .alltext{
-        left: 350px;
-    }
-}
-@media (max-width: 1284px){
-    .alltext{
-    
-        width: 400px;
-        left: 30%;
-        color: black;
-    }
-    .titleBanner{
-
-        font-size: 25px;
-    }
-    .textBanner{
-        left: 10%;
-    }
-
-}
-@media (max-width: 1024px) {
-
-    .logo{
-    opacity: 0;
-    }
-    .logo2{
-    opacity: 0;
-    }
-    .alltext{
-        width: 400px;
-        left: 20%;
-    }
+.buttonBanner:active{
+    background-color: #888686;
 }
 
-@media (max-width: 910px) {
-
-    .titleBanner{
-
-        font-size: 20px;
-    }
-    .textBanner{
-        font-size: 17px;
-    }
-    .alltext{
-        width: 330px;
-        left: 17%;
-    }
-}
-@media (max-width: 690px){
-    .titleBanner{
-
-        font-size: 20px;
-    }
-
-    .alltext{
-        width: 330px;
-        left: -25%;
-        background: rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(50px);
-        -webkit-backdrop-filter: blur(50px);
-    }
-}
